fixed image width on mobile

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -109,6 +109,7 @@ table
 img
   display: block
   margin: 0 auto
+  max-width: 100%
 
 code
   background: black
